# curves

./: CMakeLists.txt  LICENSE  build.sh  conanfile.txt
include/: DisplayPadd.hpp  EventTimer.hpp  GL.hpp  Timer.hpp
src/: main.cpp
